# student-section-api

./: README.md  manage.py  pyproject.toml  requirements.txt
stilsoft_test/: asgi.py  settings.py  urls.py  wsgi.py
students/: admin.py  models.py  permissions.py  serializers.py  views.py
students/migrations/: 0001_initial.py  0002_student_is_student_student_is_teacher.py
