[tool.poetry]
name = "стилсофт тестовое"
version = "0.1.0"
description = ""
authors = ["Rostislav Dolgushevskiy <rosdol246@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
djoser = "^2.1.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
